Fixes preferences alignment

--- a/http_src/views/private/clients/white-mode.scss
+++ b/http_src/views/private/clients/white-mode.scss
@@ -203,7 +203,7 @@ code {
     }
   }
   
-  td, th {
+  th {
     vertical-align: middle;
   }
 }
